# iroh

./: .gitignore  Cargo.toml  justfile
.docker/sandbox/: spec.yaml
.github/workflows/: ci.yml  patchbay.yml  simulation-nightly.yml  simulation-weekly.yml
docs/simulation/: operations.md  patchbay-parity.md  relay-parity.md  stage4-performance.md  stage5-performance.md  stage6-performance.md
docs/superpowers/plans/: 2026-07-21-iroh-deterministic-closure.md  2026-07-21-iroh-deterministic-simulation-stage-0-1.md  2026-07-21-iroh-deterministic-simulation-stage-2.md  2026-07-21-iroh-deterministic-simulation-stage-3.md  2026-07-21-iroh-deterministic-simulation-stage-4.md  2026-07-21-iroh-deterministic-simulation-stage-5.md  2026-07-21-iroh-deterministic-simulation-stage-6.md  2026-07-21-iroh-deterministic-simulation-stage-7.md  2026-07-22-iroh-tigerstyle-hardening.md  2026-07-22-iroh-tigerstyle-remediation.md
docs/superpowers/specs/: 2026-07-21-iroh-deterministic-closure-design.md
docs/testing/: determinism-audit.md  deterministic-simulation-architecture.md  simulation.md  stage1-performance-sample.md
iroh/: Cargo.toml
iroh-base/src/: endpoint_addr.rs  lib.rs
iroh-dns-server/: Cargo.toml  README.md  config.dev.toml  config.prod.toml
iroh-dns-server/src/: admission.rs  config.rs  dns.rs  http.rs  lib.rs  main.rs  metrics.rs  server.rs  store.rs  util.rs
iroh-dns-server/src/http/: rate_limiting.rs  tls.rs  transport.rs
iroh-dns-server/src/store/: signed_packets.rs
iroh-dns/src/: android.rs  dns.rs  endpoint_info.rs  pkarr.rs
iroh-relay/: Cargo.toml
iroh-relay/src/: client.rs  lib.rs  main.rs  ping_tracker.rs  server.rs
iroh-relay/src/client/: streams.rs
iroh-relay/src/protos/: handshake.rs  relay.rs
iroh-relay/src/server/: admission.rs  client.rs  clients.rs  http_server.rs  metrics.rs  streams.rs  testing.rs
iroh-relay/tests/: relay_axum.rs
iroh-runtime/: Cargo.toml
iroh-runtime/src/: context.rs  decision.rs  id.rs  lib.rs  task.rs  time.rs  trace.rs
iroh-runtime/tests/: context.rs  decision.rs  task.rs  time.rs  trace_schema.rs
iroh-sim/: Cargo.toml  operations-policy.json
iroh-sim/benches/: deterministic_closure.rs  stage4_environment.rs  stage5_relay.rs  stage6_scheduler.rs
iroh-sim/corpus/stage3-trigger-stall/: metadata.json  scenario.json
iroh-sim/corpus/stage4-discovery-conflict/: metadata.json  scenario.json
iroh-sim/corpus/stage4-nat-rebind-expiry/: metadata.json  scenario.json
iroh-sim/corpus/stage5-direct-relay-fallback/: metadata.json  scenario.json
iroh-sim/corpus/stage5-relay-restart/: metadata.json  scenario.json
iroh-sim/corpus/stage6-rare-ready-order/: metadata.json  scenario.json
iroh-sim/src/: artifact.rs  backend.rs  campaign.rs  cli.rs  corpus.rs  discovery.rs  dns.rs  failure.rs  invariant.rs  inventory.rs  kernel.rs  kernel_driver.rs  ledger.rs  lib.rs  manifest.rs  minimize.rs  monitor.rs  nat.rs  network.rs  observation.rs  operations.rs  parity.rs  parity_catalog.rs  portmap.rs  relay.rs  runner.rs  scenario.rs  scenario_model.rs  swarm.rs  trace.rs
iroh-sim/swarms/: direct-smoke.json  discovery-timing.json  mobility-timing.json  nat-behavior.json  ready-order-pressure.json  relay-lifecycle.json
iroh-sim/tests/: cli.rs  corpus_campaign.rs  deterministic_runtime.rs  discovery.rs  dns.rs  endpoint.rs  failure_replay.rs  invariants.rs  kernel.rs  manifest.rs  minimize.rs  nat.rs  network.rs  operations.rs  parity.rs  portmap.rs  relay.rs  runner.rs  scenario_model.rs  swarm.rs  trace.rs
iroh-sim/tests/fixtures/: ipv4-stream-corruption.json  ipv4-stream-loss.json  ipv4-stream.json  ipv6-datagram.json  ipv6-stream.json  patchbay-public.json  stage4-mobility.json  v2-ipv4-stream.json
iroh/bench/: Cargo.toml
iroh/bench/src/: iroh.rs  lib.rs
iroh/examples/: connect-unreliable.rs  connect.rs  pq-only-key-exchange.rs  prefer-pq-key-exchange.rs  transfer.rs
iroh/src/: address_lookup.rs  endpoint.rs  lib.rs  portmapper.rs  runtime.rs  simulation.rs  socket.rs
iroh/src/address_lookup/: memory.rs
iroh/src/simulation/: deterministic_crypto.rs
iroh/src/socket/: metrics.rs  remote_map.rs  transports.rs
iroh/src/socket/remote_map/: remote_state.rs
iroh/src/socket/remote_map/remote_state/: path_state.rs  remote_info.rs
iroh/src/socket/transports/: ip.rs  relay.rs
iroh/src/socket/transports/relay/: actor.rs
iroh/src/test_utils/: test_transport.rs
iroh/src/tls/: misc.rs
iroh/tests/patchbay/: nat.rs  util.rs
scripts/: check-determinism-boundaries.sh  determinism-boundaries.txt
scripts/tests/: check-determinism-boundaries.sh
