[package]
name = "iroh-runtime"
version = "1.0.3"
edition = "2024"
description = "Internal runtime capabilities for Iroh"
license = "MIT OR Apache-2.0"
authors = ["n0 team"]
repository = "https://github.com/n0-computer/iroh"
keywords = ["networking", "testing", "simulation"]
rust-version = "1.91"

[lints]
workspace = true

[dependencies]
blake3 = "1.8.3"
rand = "0.10"
rand_chacha = "0.10"
serde = { version = "1.0.219", features = ["derive"] }

[target.'cfg(not(all(target_family = "wasm", target_os = "unknown")))'.dependencies]
futures-util = "0.3"
tokio = { version = "1", features = ["sync", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }

[target.'cfg(all(target_family = "wasm", target_os = "unknown"))'.dependencies]
getrandom = { version = "0.4", features = ["wasm_js"] }
web-time = "1"

[dev-dependencies]
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt", "test-util", "time"] }
